starting to get functional

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 
 </head>
 <body>
-<script>
- lib = new Explorobot({"source":{"scene":"scene2"}});
+
+ <script>
+$(document).ready(function() {
+	lib = new Explorobot({"source":{"scene":"scene2"}});
+});
+
  </script>
 </body>
 </html>
