fix sizing on mobile, add touch support

--- a/index.html
+++ b/index.html
@@ -6,9 +6,24 @@
 	<script type="text/javascript" src="node_modules/three/three.js"></script>
 	<script type="text/javascript" src="node_modules/three/examples/js/controls/VRControls.js"></script>
 	<script type="text/javascript" src="node_modules/three/examples/js/effects/VREffect.js"></script>
+	<script type="text/javascript" src="node_modules/three/examples/js/renderers/Projector.js"></script>
+	<script type="text/javascript" src="node_modules/threex.domevents/threex.domevents.js"></script>
 	<script type="text/javascript" src="lib/explorobot.js"></script>
+<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-
+<style>
+body { margin: 0; overflow: hidden; background-color: #000;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    color: #fff;
+    margin: 0px;
+    padding: 0;
+    overflow: hidden;}
+</style>
 </head>
 <body>
 
